--- a/database/movies.css
+++ b/database/movies.css
@@ -99,6 +99,7 @@ h5{
 }
 table{
 margin-left: 200px;
+margin-right: 250px;
 border: none;
 text-align: center;
 font-family:'Montserrat', sans-serif;
